--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,12 +1,16 @@
+/*
 body{
   padding: 20px;
   background: #eee;
 }
+*/
+/*
 .container{
   background-color: #fff;
   padding: 20px 20px;
   box-shadow: 1px 1px 1px rgba(0,0,0,0.75);
 }
+*/
 .btn{
   margin: 0 2px;
 }
@@ -49,4 +53,11 @@ div[class^=col-] label:only-child{
 /* Select states */
 .empty .Select-control{
   background-color: #eee;
+}
+.error .Select-control{
+  background-color: #f7b3af;
+}
+.Select.error.has-value.Select--single > .Select-control .Select-value .Select-value-label,
+.Select.error.has-value.is-pseudo-focused.Select--single > .Select-control .Select-value .Select-value-label{
+  color: #666;
 }
